--- a/sass/stream.scss
+++ b/sass/stream.scss
@@ -151,11 +151,14 @@ $t-margin: 10px;
             bottom: $book-action-info-height;
             width: auto;
             height:auto;
+
+            border-bottom: 2px solid $color-primary;
         }
 
         .stream-action:hover,
         .stream-action:focus,
-        .stream-action:active {
+        .stream-action:active,
+        .stream-action.open {
             cursor: pointer;
             border-bottom: 2px solid $color-accent;
         }
@@ -177,20 +180,23 @@ $t-margin: 10px;
                 right: 0;
                 bottom: 0;
                 left: 0;
+                
+                text-align: left;
+                height: auto;
+                width: 100%;
+            }
+
+            #profile-dropdown,
+            #profile-dropdown:active,
+            #profile-dropdown:focus,
+            #profile-dropdown:link {
+                box-shadow: none;
+            }
+
+            #profile-dropdown + .dropdown-menu {
                 min-width: 80%;
                 width: auto;
                 max-width: 120%;
-                text-align: left;
-                height: auto;
-
-                .dropdown-menu {
-                    width: 80%;
-                }
-            }
-
-            #profile-dropdown:active,
-            #profile-dropdown:focus {
-                box-shadow: none;
             }
         }
 
