--- a/sass/material-form.scss
+++ b/sass/material-form.scss
@@ -108,7 +108,8 @@ $input-spacing-margin-bottom: 8px;
 
 }
 
-.material-form.form-group input {
+.material-form.form-group input,
+.material-form.form-group .menu-search input {
     border: none;
     border-bottom: 	1px solid $color-grey;
     border-radius: 0;
@@ -124,10 +125,11 @@ $input-spacing-margin-bottom: 8px;
     width: 100%;
 }
 
-.material-form.form-group .material-input-field {
+.material-form.form-group .material-input-field,
+.material-form.form-group .menu-search .material-input-field {
     margin-right: $card-padding;
     margin-left: $card-padding;
-    margin-bottom: $input-spacing-margin-bottom;;
+    margin-bottom: $input-spacing-margin-bottom;
 
     position: relative;
     padding-top: $input-spacing-padding-top;
@@ -146,7 +148,28 @@ $input-spacing-margin-bottom: 8px;
     }
 }
 
-.material-input-field label {
+.material-form.form-group .menu-search .material-input-field {
+    margin-right: $card-padding * 2;
+    margin-left: $card-padding * 2;
+    margin-top: 8px;
+    margin-bottom: 0;
+    height: $input-font-size + $input-spacing-padding-top;
+
+    input {
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+}
+
+.material-dropdown .dropdown-menu.bump-menu-for-search {
+    top: -($input-spacing-padding-top - 2px);
+    left: -8px;
+}
+
+.material-input-field label,
+.menu-search .material-input-field label {
+    visibility: visible;
+
     position: absolute;
     left: 0;
     top: $label-margin-bottom + $label-font-size;
