--- a/styles/style.css
+++ b/styles/style.css
@@ -1864,7 +1864,8 @@ body.material {
   padding: 0 0 12px 0;
 }
 
-.material-form.form-group input {
+.material-form.form-group input,
+.material-form.form-group .menu-search input {
   border: none;
   border-bottom: 1px solid #bdbdbd;
   border-radius: 0;
@@ -1877,7 +1878,8 @@ body.material {
   width: 100%;
 }
 
-.material-form.form-group .material-input-field {
+.material-form.form-group .material-input-field,
+.material-form.form-group .menu-search .material-input-field {
   margin-right: 16px;
   margin-left: 16px;
   margin-bottom: 8px;
@@ -1886,18 +1888,41 @@ body.material {
   height: 64px;
 }
 
-.material-form.form-group .material-input-field input:hover {
+.material-form.form-group .material-input-field input:hover,
+.material-form.form-group .menu-search .material-input-field input:hover {
   border-bottom: 2px solid rgba(33, 33, 33, 0.87);
   transition: all .25s ease-in-out;
 }
 
 .material-form.form-group .material-input-field input:active,
-.material-form.form-group .material-input-field input:focus {
+.material-form.form-group .material-input-field input:focus,
+.material-form.form-group .menu-search .material-input-field input:active,
+.material-form.form-group .menu-search .material-input-field input:focus {
   padding: 0 0 7px 0;
   border-bottom: 2px solid #009688;
 }
 
-.material-input-field label {
+.material-form.form-group .menu-search .material-input-field {
+  margin-right: 32px;
+  margin-left: 32px;
+  margin-top: 8px;
+  margin-bottom: 0;
+  height: 40px;
+}
+
+.material-form.form-group .menu-search .material-input-field input {
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
+.material-dropdown .dropdown-menu.bump-menu-for-search {
+  top: -22px;
+  left: -8px;
+}
+
+.material-input-field label,
+.menu-search .material-input-field label {
+  visibility: visible;
   position: absolute;
   left: 0;
   top: 24px;
