--- a/styles/stream.css
+++ b/styles/stream.css
@@ -1,3 +1,4 @@
+/* line 6, D:/work/dat/conduit/sass/stream.scss */
 .stream {
   width: 100%;
   position: absolute;
@@ -14,26 +15,31 @@
   background: transparent;
 }
 
+/* line 22, D:/work/dat/conduit/sass/stream.scss */
 .stream .card:last-child {
   border-radius: 0 0 2px 2px;
 }
 
+/* line 28, D:/work/dat/conduit/sass/stream.scss */
 #article-stream {
   top: 0px;
 }
 
+/* line 36, D:/work/dat/conduit/sass/stream.scss */
 .btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
   border-top-right-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
 
+/* line 41, D:/work/dat/conduit/sass/stream.scss */
 .btn-group > .btn:last-child:not(:first-child), .btn-group > .dropdown-toggle:not(:first-child) {
   border-top-left-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
 
+/* line 47, D:/work/dat/conduit/sass/stream.scss */
 .stream-action {
   -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -51,6 +57,7 @@
   background-color: #009688;
 }
 
+/* line 61, D:/work/dat/conduit/sass/stream.scss */
 .stream-action .btn-primary {
   border: none;
   border-bottom: 2px solid #009688;
@@ -59,11 +66,13 @@
   box-shadow: none;
 }
 
+/* line 69, D:/work/dat/conduit/sass/stream.scss */
 .stream-action .btn-primary:active,
 .stream-action .btn-primary.active {
   color: #fff;
 }
 
+/* line 74, D:/work/dat/conduit/sass/stream.scss */
 .stream-action .btn-primary:active,
 .stream-action .btn-primary.active,
 .stream-action .btn-primary:focus,
@@ -78,10 +87,12 @@
   box-shadow: none;
 }
 
+/* line 89, D:/work/dat/conduit/sass/stream.scss */
 .stream-action .btn {
   height: 100%;
 }
 
+/* line 96, D:/work/dat/conduit/sass/stream.scss */
 .fluid-container {
   width: auto;
   position: absolute;
@@ -96,6 +107,7 @@
   display: inline-block;
 }
 
+/* line 117, D:/work/dat/conduit/sass/stream.scss */
 .book {
   width: auto;
   top: 90px;
@@ -105,6 +117,7 @@
   float: right;
 }
 
+/* line 127, D:/work/dat/conduit/sass/stream.scss */
 .stream-header {
   -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -125,6 +138,7 @@
   background-color: transparent;
 }
 
+/* line 146, D:/work/dat/conduit/sass/stream.scss */
 .stream-header .stream-action {
   color: #fff;
   box-shadow: none;
@@ -135,6 +149,7 @@
   border-bottom: 2px solid #009688;
 }
 
+/* line 158, D:/work/dat/conduit/sass/stream.scss */
 .stream-header .stream-action:hover,
 .stream-header .stream-action:focus,
 .stream-header .stream-action:active,
@@ -143,6 +158,7 @@
   border-bottom: 2px solid #ff5252;
 }
 
+/* line 168, D:/work/dat/conduit/sass/stream.scss */
 .stream-header .stream-action.dropdown {
   position: absolute;
   left: 0;
@@ -150,6 +166,7 @@
   border-radius: 2px 0 0 0;
 }
 
+/* line 175, D:/work/dat/conduit/sass/stream.scss */
 .stream-header .stream-action.dropdown #profile-dropdown {
   position: absolute;
   color: #fff;
@@ -163,6 +180,7 @@
   width: 100%;
 }
 
+/* line 189, D:/work/dat/conduit/sass/stream.scss */
 .stream-header .stream-action.dropdown #profile-dropdown,
 .stream-header .stream-action.dropdown #profile-dropdown:active,
 .stream-header .stream-action.dropdown #profile-dropdown:focus,
@@ -170,18 +188,21 @@
   box-shadow: none;
 }
 
+/* line 196, D:/work/dat/conduit/sass/stream.scss */
 .stream-header .stream-action.dropdown #profile-dropdown + .dropdown-menu {
   min-width: 80%;
   width: auto;
   max-width: 120%;
 }
 
+/* line 203, D:/work/dat/conduit/sass/stream.scss */
 .stream-header .stream-action.small {
   right: 0;
   left: 85%;
   border-radius: 0 2px 0 0;
 }
 
+/* line 211, D:/work/dat/conduit/sass/stream.scss */
 .stream-header .info-bar {
   background: #757575 !important;
   position: relative;
@@ -196,6 +217,7 @@
   line-height: 24px;
 }
 
+/* line 228, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper {
   -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -213,12 +235,14 @@
   z-index: 100;
 }
 
+/* line 241, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper .btn-primary {
   border: none;
   border-bottom: 2px solid #009688;
   box-shadow: none;
 }
 
+/* line 247, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper .btn-primary:active,
 #book-action-wrapper .btn-primary.active,
 #book-action-wrapper .btn-primary:focus,
@@ -233,6 +257,7 @@
   box-shadow: none;
 }
 
+/* line 261, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper .nya-bs-select {
   position: absolute;
   left: 0;
@@ -244,6 +269,7 @@
   box-shadow: none;
 }
 
+/* line 273, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper nya-bs-select:active,
 #book-action-wrapper nya-bs-select.active,
 #book-action-wrapper nya-bs-select:focus,
@@ -258,6 +284,7 @@
   box-shadow: none;
 }
 
+/* line 287, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper .stream-action {
   position: absolute;
   width: 48px;
@@ -270,6 +297,9 @@
   box-shadow: none;
 }
 
+/* line 299, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper #export-book {
   height: 56px;
 }
+
+/*# sourceMappingURL=../styles/stream.map */
