--- a/styles/viewer.css
+++ b/styles/viewer.css
@@ -1,3 +1,4 @@
+/* line 13, D:/work/dat/conduit/sass/viewer.scss */
 .article-view {
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -ms-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -15,6 +16,7 @@
   background: #fff;
 }
 
+/* line 28, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper {
   position: absolute;
   top: 0;
@@ -24,6 +26,7 @@
   overflow-y: auto;
 }
 
+/* line 37, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #subject {
   color: #bdbdbd;
   font-size: 12px;
@@ -34,6 +37,7 @@
   text-align: center;
 }
 
+/* line 47, D:/work/dat/conduit/sass/viewer.scss */
 .btn-edit {
   visibility: visible;
   color: #212121;
@@ -42,32 +46,38 @@
   clear: both;
 }
 
+/* line 54, D:/work/dat/conduit/sass/viewer.scss */
 .btn-edit:hover {
   background-color: #d1d1d1;
 }
 
+/* line 58, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text.edit-field {
   padding: 15px;
   height: 24em;
   margin-top: 5em;
 }
 
+/* line 64, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #title-wrapper {
   position: relative;
   margin-top: 8px;
   margin: 0 15px;
 }
 
+/* line 71, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .title {
   font-size: 1.5em;
   font-family: 'Montserrat', sans-serif;
 }
 
+/* line 76, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #title-wrapper .edit-field {
   line-height: 1.813em;
   height: 6em;
 }
 
+/* line 81, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper {
   position: relative;
   width: 100%;
@@ -79,6 +89,7 @@
   clear: both;
 }
 
+/* line 91, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-right {
   position: absolute;
   top: 50%;
@@ -87,6 +98,7 @@
   z-index: 100;
 }
 
+/* line 98, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-left {
   position: absolute;
   top: 50%;
@@ -95,6 +107,7 @@
   z-index: 100;
 }
 
+/* line 107, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper::before {
   content: '';
   display: inline-block;
@@ -103,6 +116,7 @@
   margin-right: -0.25em;
 }
 
+/* line 115, D:/work/dat/conduit/sass/viewer.scss */
 #image-wrapper .nav-arrow {
   -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -122,6 +136,7 @@
   vertical-align: middle;
 }
 
+/* line 136, D:/work/dat/conduit/sass/viewer.scss */
 #image-wrapper .nav-arrow:hover {
   -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -133,10 +148,12 @@
   transition: box-shadow .25s ease-in-out;
 }
 
+/* line 144, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper .greyout {
   visibility: hidden;
 }
 
+/* line 148, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .article-image {
   display: inline-block;
   margin: auto;
@@ -144,22 +161,26 @@
   text-align: center;
 }
 
+/* line 155, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .article-image .image {
   width: 100%;
   max-height: 50vh;
   vertical-align: middle;
 }
 
+/* line 161, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-load-error {
   color: #ff5252;
 }
 
+/* line 165, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text-wrapper {
   margin: 0 15px 15px 15px;
   position: relative;
   top: 30px;
 }
 
+/* line 171, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text {
   display: block;
   font-size: 1.125em;
@@ -168,16 +189,19 @@
   white-space: pre-line;
 }
 
+/* line 179, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .edit-field {
   padding: 0 1vw;
   width: 100%;
 }
 
+/* line 184, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .editable-buttons {
   float: right;
   margin: 5px 0 75px 0;
 }
 
+/* line 189, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #id {
   color: #bdbdbd;
   font-size: 14px;
@@ -187,10 +211,12 @@
   bottom: 15px;
 }
 
+/* line 196, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #id a {
   color: #bdbdbd;
 }
 
+/* line 203, D:/work/dat/conduit/sass/viewer.scss */
 #action-area {
   position: absolute;
   right: 0;
@@ -249,11 +275,13 @@
     border-radius: 2px;
     z-index: 101;
 }*/
+/* line 263, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .material-btn {
   margin: 0;
   font-weight: 700;
 }
 
+/* line 268, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-group.open .dropdown-toggle {
   width: 100% !important;
   min-width: initial !important;
@@ -261,38 +289,46 @@
   background: rgba(0, 150, 136, 0.12);
 }
 
+/* line 275, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation {
   position: absolute;
   left: 15px;
   bottom: 7px;
 }
 
+/* line 280, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination {
   margin: 0;
 }
 
+/* line 284, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination > .disabled > a {
   color: #bdbdbd;
 }
 
+/* line 288, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination-sm > li:first-child > a {
   width: auto !important;
   padding: 0 5px !important;
 }
 
+/* line 292, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination-sm > li:first-child > a:hover {
   border-radius: 2px;
 }
 
+/* line 296, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination-sm > li:last-child > a {
   width: auto !important;
   padding: 0 5px !important;
 }
 
+/* line 300, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination-sm > li:last-child > a:hover {
   border-radius: 2px;
 }
 
+/* line 304, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination > li > a {
   width: 2em;
   height: 2em;
@@ -305,6 +341,7 @@
   color: #009688;
 }
 
+/* line 318, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination > .active > a {
   width: 2em;
   height: 2em;
@@ -316,6 +353,7 @@
   color: #fff;
 }
 
+/* line 333, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-btn {
   position: absolute;
   top: 10px;
@@ -332,16 +370,19 @@
   vertical-align: middle;
 }
 
+/* line 349, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .caret {
   visibility: hidden;
 }
 
+/* line 353, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:after {
   font-family: 'Glyphicons Halflings';
   content: '\e235';
   margin-left: -.25em;
 }
 
+/* line 359, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle {
   position: absolute;
   top: 10px;
@@ -361,17 +402,20 @@
   box-shadow: none;
 }
 
+/* line 379, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:hover {
   cursor: pointer;
   background-color: #f0f0f0;
 }
 
+/* line 384, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:active,
 #overflow-menu .btn.btn-default.dropdown-toggle:focus {
   cursor: pointer;
   background-color: #e3e3e3;
 }
 
+/* line 390, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .dropdown-menu.open {
   -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -391,6 +435,7 @@
   z-index: 101;
 }
 
+/* line 406, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .form-control {
   box-shadow: none;
   -webkit-box-shadow: none;
@@ -400,6 +445,9 @@
   right: 0;
 }
 
+/* line 415, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .edit-field.form-control {
   width: 100% !important;
 }
+
+/*# sourceMappingURL=../styles/viewer.map */
