--- a/styles/card.css
+++ b/styles/card.css
@@ -1,3 +1,4 @@
+/* line 24, D:/work/dat/conduit/sass/card.scss */
 .stream.card {
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -ms-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -19,10 +20,12 @@
   transition: margin .25s ease-in-out;
 }
 
+/* line 47, D:/work/dat/conduit/sass/card.scss */
 .card-header {
   height: 1.25em;
 }
 
+/* line 51, D:/work/dat/conduit/sass/card.scss */
 .stream.card .subject {
   color: #bdbdbd;
   position: absolute;
@@ -32,6 +35,7 @@
   font-size: .75em;
 }
 
+/* line 60, D:/work/dat/conduit/sass/card.scss */
 .stream.card:hover {
   -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -43,10 +47,12 @@
   cursor: pointer;
 }
 
+/* line 68, D:/work/dat/conduit/sass/card.scss */
 .stream.card:hover .card-btn {
   visibility: visible;
 }
 
+/* line 72, D:/work/dat/conduit/sass/card.scss */
 .stream.card .title {
   overflow: hidden;
   white-space: nowrap;
@@ -55,6 +61,7 @@
   line-height: 1.5em;
 }
 
+/* line 81, D:/work/dat/conduit/sass/card.scss */
 .stream.card .text {
   overflow: hidden;
   white-space: normal;
@@ -64,6 +71,7 @@
   line-height: 1em;
 }
 
+/* line 92, D:/work/dat/conduit/sass/card.scss */
 .stream.card .tag {
   font-size: .75em;
   line-height: 0.938em;
@@ -74,6 +82,7 @@
   border: none;
 }
 
+/* line 103, D:/work/dat/conduit/sass/card.scss */
 .stream.card #tag-wrapper {
   width: 70%;
   margin: 0.313em 0 0 0;
@@ -83,6 +92,7 @@
   float: left;
 }
 
+/* line 112, D:/work/dat/conduit/sass/card.scss */
 .stream.card #tag-wrapper-action {
   width: 33%;
   float: left;
@@ -92,6 +102,7 @@
   background: inherit;
 }
 
+/* line 121, D:/work/dat/conduit/sass/card.scss */
 .stream.card #tag-wrapper-action .action {
   background: none;
   border: none;
@@ -101,10 +112,12 @@
   color: #009688;
 }
 
+/* line 130, D:/work/dat/conduit/sass/card.scss */
 .stream.card #icon {
   float: left;
 }
 
+/* line 134, D:/work/dat/conduit/sass/card.scss */
 .stream.card #date {
   width: 30%;
   margin: 0.313em 0 0 0;
@@ -114,6 +127,7 @@
   float: right;
 }
 
+/* line 143, D:/work/dat/conduit/sass/card.scss */
 .stream.card .card-btn {
   visibility: hidden;
   position: absolute;
@@ -124,12 +138,14 @@
   filter: alpha(opacity=40);
 }
 
+/* line 154, D:/work/dat/conduit/sass/card.scss */
 .stream.card .card-btn:hover {
   opacity: 1;
   filter: alpha(opacity=100);
   transition: opacity .2s ease-in-out;
 }
 
+/* line 160, D:/work/dat/conduit/sass/card.scss */
 .card.active {
   -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -143,44 +159,54 @@
   z-index: 99;
 }
 
+/* line 168, D:/work/dat/conduit/sass/card.scss */
 .card.active:hover {
   background: #cccccc;
   transition: margin .25s ease-in-out;
 }
 
+/* line 173, D:/work/dat/conduit/sass/card.scss */
 .card.active .tag {
   color: #212121;
 }
 
+/* line 178, D:/work/dat/conduit/sass/card.scss */
 .read .title {
   color: #bdbdbd;
 }
 
+/* line 181, D:/work/dat/conduit/sass/card.scss */
 .read .text {
   color: #bdbdbd;
 }
 
+/* line 184, D:/work/dat/conduit/sass/card.scss */
 .read .tag {
   background: transparent;
   color: #bdbdbd;
 }
 
+/* line 191, D:/work/dat/conduit/sass/card.scss */
 .active-read .title {
   color: #717171;
 }
 
+/* line 194, D:/work/dat/conduit/sass/card.scss */
 .active-read .text {
   color: #717171;
 }
 
+/* line 197, D:/work/dat/conduit/sass/card.scss */
 .active-read .tag {
   color: #717171;
 }
 
+/* line 200, D:/work/dat/conduit/sass/card.scss */
 .active-read .subject {
   color: #717171;
 }
 
+/* line 205, D:/work/dat/conduit/sass/card.scss */
 .card.ng-hide:not(.ng-hide-animate) {
   display: block !important;
   transition: all .25s ease-in-out !important;
@@ -190,3 +216,5 @@
   padding: 0 !important;
   border: none;
 }
+
+/*# sourceMappingURL=../styles/card.map */
