--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,14 +1,17 @@
+/* line 13, D:/work/dat/conduit/sass/layout.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
+/* line 19, D:/work/dat/conduit/sass/layout.scss */
 html {
   font-size: 100% !important;
   font-family: 'SourceSansPro', sans-serif !important;
 }
 
+/* line 24, D:/work/dat/conduit/sass/layout.scss */
 body {
   min-width: 750px;
   position: fixed;
@@ -24,6 +27,7 @@ body {
   background-color: #f2f2f2;
 }
 
+/* line 42, D:/work/dat/conduit/sass/layout.scss */
 #container {
   position: fixed;
   padding-left: 25vw;
@@ -34,6 +38,7 @@ body {
   background: transparent;
 }
 
+/* line 52, D:/work/dat/conduit/sass/layout.scss */
 #container .column {
   position: relative;
   float: left;
@@ -41,6 +46,7 @@ body {
   background: inherit;
 }
 
+/* line 59, D:/work/dat/conduit/sass/layout.scss */
 #center {
   padding: 0;
   width: 55vw;
@@ -48,6 +54,7 @@ body {
   float: left;
 }
 
+/* line 66, D:/work/dat/conduit/sass/layout.scss */
 #left {
   width: 25vw;
   padding: 0;
@@ -58,6 +65,7 @@ body {
   display: inline-block;
 }
 
+/* line 77, D:/work/dat/conduit/sass/layout.scss */
 #right {
   width: 20vw;
   padding: 0;
@@ -69,6 +77,7 @@ body {
   overflow-x: visible;
 }
 
+/* line 88, D:/work/dat/conduit/sass/layout.scss */
 #header {
   -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -85,6 +94,7 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+/* line 106, D:/work/dat/conduit/sass/layout.scss */
 #header-content-wrapper:before {
   content: '';
   display: inline-block;
@@ -93,6 +103,7 @@ body {
   margin-right: -0.25em;
 }
 
+/* line 114, D:/work/dat/conduit/sass/layout.scss */
 #header-content-wrapper {
   display: inline-block;
   vertical-align: middle;
@@ -102,15 +113,18 @@ body {
   position: relative;
 }
 
+/* line 123, D:/work/dat/conduit/sass/layout.scss */
 #header-content {
   display: inline-block;
   vertical-align: middle;
 }
 
+/* line 128, D:/work/dat/conduit/sass/layout.scss */
 * html #left {
   left: 390px;
 }
 
+/* line 132, D:/work/dat/conduit/sass/layout.scss */
 #header .btn-group.dropdown,
 #header .btn-group.dropdown:active,
 #header .btn-group.dropdown:focus {
@@ -124,6 +138,7 @@ body {
   box-shadow: none;
 }
 
+/* line 147, D:/work/dat/conduit/sass/layout.scss */
 #header .btn-group.dropdown:hover,
 #header .btn-group.dropdown:active,
 #header .btn-group.dropdown:focus,
@@ -133,6 +148,7 @@ body {
   text-decoration: underline;
 }
 
+/* line 157, D:/work/dat/conduit/sass/layout.scss */
 #header .dropdown #profile-dropdown {
   background: transparent;
   border: none;
@@ -140,6 +156,7 @@ body {
   height: 100%;
 }
 
+/* line 164, D:/work/dat/conduit/sass/layout.scss */
 #header .dropdown-menu {
   -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -153,8 +170,11 @@ body {
   margin-top: -10px;
 }
 
+/* line 173, D:/work/dat/conduit/sass/layout.scss */
 #header .dropdown-menu .disabled {
   padding: 3px 20px;
   color: #bdbdbd;
   cursor: default;
 }
+
+/*# sourceMappingURL=../styles/layout.map */
