--- a/styles/material-card.css
+++ b/styles/material-card.css
@@ -1,9 +1,11 @@
+/* line 4, D:/work/dat/conduit/sass/material-card.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
+/* line 10, D:/work/dat/conduit/sass/material-card.scss */
 body.material {
   position: fixed;
   left: 0;
@@ -18,6 +20,7 @@ body.material {
   background-color: #f2f2f2;
 }
 
+/* line 29, D:/work/dat/conduit/sass/material-card.scss */
 .material.card {
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -ms-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -31,22 +34,26 @@ body.material {
   background: #fff;
 }
 
+/* line 42, D:/work/dat/conduit/sass/material-card.scss */
 .material.card .primary-title {
   font-size: 24px;
   padding-bottom: 16px;
 }
 
+/* line 47, D:/work/dat/conduit/sass/material-card.scss */
 .material.card .supporting-text {
   font-size: 14px;
   line-height: 20px;
   padding-bottom: 16px;
 }
 
+/* line 53, D:/work/dat/conduit/sass/material-card.scss */
 .material.card .action-area {
   height: 52px;
   margin: 0 -24px -24px -24px;
 }
 
+/* line 58, D:/work/dat/conduit/sass/material-card.scss */
 .divider.full-bleed {
   left: 0;
   right: 0;
@@ -54,6 +61,7 @@ body.material {
   background-color: #bdbdbd;
 }
 
+/* line 65, D:/work/dat/conduit/sass/material-card.scss */
 .divider.inset {
   left: 0;
   right: 0;
@@ -61,6 +69,7 @@ body.material {
   background-color: rgba(33, 33, 33, 0.12);
 }
 
+/* line 72, D:/work/dat/conduit/sass/material-card.scss */
 .material-card .expand-area {
   padding-top: 16px;
 }
@@ -98,6 +107,7 @@ body.material {
     background: rgba($color-primary, .12);
 }*/
 @media only screen and (min-width: 480px) {
+  /* line 111, D:/work/dat/conduit/sass/material-card.scss */
   .material.card {
     width: 80vw;
     margin-left: 10vw;
@@ -105,6 +115,7 @@ body.material {
 }
 
 @media only screen and (min-width: 768px) {
+  /* line 119, D:/work/dat/conduit/sass/material-card.scss */
   .material.card {
     width: 60vw;
     margin-left: 20vw;
@@ -112,6 +123,7 @@ body.material {
 }
 
 @media only screen and (min-width: 992px) {
+  /* line 127, D:/work/dat/conduit/sass/material-card.scss */
   .material.card {
     width: 50vw;
     margin-left: 25vw;
@@ -119,6 +131,7 @@ body.material {
 }
 
 @media only screen and (min-width: 1200px) {
+  /* line 135, D:/work/dat/conduit/sass/material-card.scss */
   .material.card {
     width: 30vw;
     margin-left: 35vw;
@@ -126,8 +139,11 @@ body.material {
 }
 
 @media only screen and (min-width: 1600px) {
+  /* line 143, D:/work/dat/conduit/sass/material-card.scss */
   .material.card {
     width: 20vw;
     margin-left: 40vw;
   }
 }
+
+/*# sourceMappingURL=../styles/material-card.map */
