--- a/styles/material-menu.css
+++ b/styles/material-menu.css
@@ -1,3 +1,4 @@
+/* line 4, D:/work/dat/conduit/sass/material-menu.scss */
 .material-dropdown .dropdown-menu {
   -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   -ms-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -10,15 +11,20 @@
   z-index: 101;
 }
 
+/* line 12, D:/work/dat/conduit/sass/material-menu.scss */
 .material-dropdown .dropdown-menu a {
   display: inline-block;
   width: 100%;
 }
 
+/* line 17, D:/work/dat/conduit/sass/material-menu.scss */
 .material-dropdown .dropdown-menu a .item {
   display: inline;
 }
 
+/* line 20, D:/work/dat/conduit/sass/material-menu.scss */
 .material-dropdown .dropdown-menu a .glyphicon {
   float: right;
 }
+
+/*# sourceMappingURL=../styles/material-menu.map */
