--- a/templates/material-dropdown.html
+++ b/templates/material-dropdown.html
@@ -1,12 +1,15 @@
 <div>
     <div class="btn-group material-dropdown dropdown" uib-dropdown keyboard-nav on-toggle="searchQuery = ''">
-        <button     id="profile-dropdown"
-                    type="button" class="material-btn flat primary bold"
-                    uib-dropdown-toggle>
+        <button     id="{{::label}}"
+                    type="button" class="btn btn-primary"
+                    uib-dropdown-toggle
+                    ng-class="{'item-selected': model.length}"
+                    ng-focus="thisFocus = true"
+                    ng-blur="thisFocus = false">
             {{label}}
             <span class="caret"></span>
         </button>
-        <ul uib-dropdown-menu id="{{::label}}" role="menu" class="inner" ng-class="{'bump-menu-for-search': search}" ng-click="$event.stopPropagation()">
+        <ul uib-dropdown-menu role="menu" class="inner" ng-class="{'bump-menu-for-search': search}" ng-click="$event.stopPropagation()">
             <div class="menu-search" ng-show="search">
                 <form class="material-form form-group">
                     <div class="row">
@@ -22,5 +25,5 @@
             </li>
         </ul>
     </div>
-    <label for="{{::label}}" class="with-text" ng-class="{'hide': !itemSelected, 'fade-in': itemSelected, active: teamDropdownFocus}">{{::label}}</label>
+    <label for="{{::label}}" class="with-text" ng-class="{'hide': !model.length, 'fade-in': model.length, active: thisFocus}">{{::label}}</label>
 </div>
