--- a/sass/viewer.scss
+++ b/sass/viewer.scss
@@ -44,6 +44,23 @@ $pagination-size: 2em;
     text-align: center;
 }
 
+.article-view #edit-menu {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    
+    font-size: 12px;
+    text-align: right;
+
+    .primary-text {
+        color: $color-font;
+    }
+
+    a {
+        color: $color-grey;
+    }
+}
+
 .btn-edit  {
     visibility: visible;
     color: $color-font;	
