--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -10,6 +10,8 @@ $center-width: (100vw - ($left-width + $right-width));
 $header-height: 48px;
 $header-padding: 5px;
 
+$classification-height: 20px;
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -37,15 +39,46 @@ body {
     font-family: 'SourceSansPro', sans-serif;
 
   background-color: $color-background;
-}		
+}
+
+.classification {
+    height: $classification-height;
+    float: left;
+    width: 100%;
+
+    text-align: center;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: $classification-height;
+}
+
+.classification.footer {
+    position: absolute;
+    bottom: 0;
+}
+
+.classification.u {
+    background-color: rgb(0,180,0);
+    color: #fff;
+}
+
+.classification.s {
+    background-color: rgb(255,0,0);
+    color: #fff;
+}
+
+.classification.ts {
+    background-color: rgb(255,255,0);
+    color: #000;
+}
         
 #container {
     position: fixed;	
     padding-left: $left-width;   	// LC fullwidth */
     padding-right: $right-width;  	// RC fullwidth + CC padding */
     height: auto;
-    bottom: 0;
-    top: $header-height;
+    bottom: $classification-height;
+    top: $header-height + $classification-height;
     background: transparent;
 }
 
