--- a/styles/layout.css
+++ b/styles/layout.css
@@ -41,7 +41,7 @@ body {
 
 .classification.u {
   background-color: #00b400;
-  color: #fff;
+  color: #000;
 }
 
 .classification.s {
@@ -56,8 +56,8 @@ body {
 
 #container {
   position: fixed;
-  padding-left: 25vw;
-  padding-right: 20vw;
+  padding-left: 23vw;
+  padding-right: 23vw;
   height: auto;
   bottom: 20px;
   top: 68px;
@@ -73,15 +73,15 @@ body {
 
 #center {
   padding: 0;
-  width: 55vw;
+  width: 54vw;
   background: #f2f2f2;
   float: left;
 }
 
 #left {
-  width: 25vw;
+  width: 23vw;
   padding: 0;
-  right: 25vw;
+  right: 23vw;
   margin-left: -100%;
   max-height: 100%;
   background: #f2f2f2;
@@ -89,9 +89,9 @@ body {
 }
 
 #right {
-  width: 20vw;
+  width: 23vw;
   padding: 0;
-  margin-right: -20vw;
+  margin-right: -23vw;
   background: #f2f2f2;
   float: left;
   margin-left: 0;
