--- a/templates/conduit.html
+++ b/templates/conduit.html
@@ -26,7 +26,7 @@
                     </li>
                     <li>
                         <div class="disabled">
-                            Version 0.6.0
+                            Version 1.0.0
                         </div>
                     </li>
                 </ul>
@@ -285,17 +285,29 @@
                                 <div ng-click="refreshFeed()">
                                    
                                     <label>Days back (up to {{filter.MAX_DAYS_BACK}})</label>
-                                        <div class="input-group col-md-5">
-                                            <input class="form-control" type="text" ng-model="filter.daysBack" ng-change="refreshFeed()"/>
-                                            <div class="input-group-btn">
-                                                <button class="btn btn-default" type="button" title="Reduce by 1" ng-click="filter.daysBack = filter.daysBack - 1">
-                                                    <span class="glyphicon glyphicon-chevron-down"></span>
-                                                </button>
-                                                <button class="btn btn-default" type="button" title="Increase by 1" ng-click="filter.daysBack = filter.daysBack + 1">
-                                                    <span class="glyphicon glyphicon-chevron-up"></span>
-                                            </div>
+                                    <div class="input-group col-md-5">
+                                        <input class="form-control" type="text" ng-model="filter.daysBack" ng-change="refreshFeed()"/>
+                                        <div class="input-group-btn">
+                                            <button class="btn btn-default" type="button" title="Reduce by 1" ng-click="filter.daysBack = filter.daysBack - 1">
+                                                <span class="glyphicon glyphicon-chevron-down"></span>
+                                            </button>
+                                            <button class="btn btn-default" type="button" title="Increase by 1" ng-click="filter.daysBack = filter.daysBack + 1">
+                                                <span class="glyphicon glyphicon-chevron-up"></span>
                                         </div>
+                                    </div>
                                    
+                                    <div id="attr-wrapper" ng-click="refreshFeed()">
+                                        <div ng-if="::attr.filter" ng-repeat="attr in ::attributes" ng-show="true" class="cbx-wrapper" id="attrs">
+                                            <input type="checkbox" id="{{::'cbx-'+attr.name}}" ng-model="attr.checked" ng-checked="attr.checked" ng-disabled="showAll" ng-click="refreshFeed()" class="pointer-on-hover"/>
+                                            <label class="checkbox-label pointer-on-hover" for="{{::'cbx-'+attr.name}}">                                        
+                                                <div alt="{{::attr.alt}}" title="{{::attr.alt}}">
+                                                    <span ng-if="::attr.glyphicon" class="glyphicon glyphicon-{{::attr.glyphicon}}"></span>
+                                                    {{attr.name}}
+                                                </div>
+                                            </label>
+                                        </div>            
+                                    </div>
+
                                     <div id="data-src-wrapper" ng-repeat="src in ::sources">
                                         <div class="cbx-wrapper-header" id="{{::src.name}}">
                                             <input type="checkbox" id="{{::'cbx-'+src.name}}" ng-model="src['checked']" ng-checked="src['checked']" ng-disabled="showAll"/>
@@ -318,17 +330,6 @@
                                         </div>  
                                     </div>
                                 
-                                    <div id="tag-wrapper" ng-click="refreshFeed()">
-                                        <div ng-if="::attr.filter" ng-repeat="attr in ::attributes" ng-show="true" class="cbx-wrapper" id="attrs">
-                                            <input type="checkbox" id="{{::'cbx-'+attr.name}}" ng-model="attr.checked" ng-checked="attr.checked" ng-disabled="showAll" ng-click="refreshFeed()"/>
-                                            <label class="checkbox-label" for="{{::'cbx-'+attr.name}}">                                        
-                                                <div alt="{{::attr.alt}}" title="{{::attr.alt}}">
-                                                    <span ng-if="::attr.glyphicon" class="glyphicon glyphicon-{{::attr.glyphicon}}"></span>
-                                                    {{attr.name}}
-                                                </div>
-                                            </label>
-                                        </div>            
-                                    </div>
                                 </div>
                             </div>
                         </uib-accordion>
