--- a/templates/conduit.html
+++ b/templates/conduit.html
@@ -26,7 +26,7 @@
                     </li>
                     <li>
                         <div class="disabled">
-                            Version 1.0.0
+                            {{'Version ' + __config.version}}
                         </div>
                     </li>
                 </ul>
